# securehealth-adjudication

./: .env.example  .gitignore  DESIGN.md  README.md  WHY_NOT_RAG.md  pyproject.toml  requirements.txt
api/: dependencies.py  main.py  routes.py
data/clinical_kb/: chronic_conditions.json  exclusion_categories.json
data/policy/: securehealth_plan_b.json
src/adjudication/: __init__.py  cli.py  config.py  enrichment.py
src/adjudication/engine/: __init__.py  accumulator.py  adjudicator.py  calculation.py  exclusions.py
src/adjudication/extraction/: __init__.py  base.py  claim_pdf.py  policy_llm.py  row_schema.py
src/adjudication/llm/: __init__.py  anthropic_provider.py  provider.py  types.py
src/adjudication/models/: __init__.py  claim.py  member.py  policy.py  settlement.py
src/adjudication/reporting/: __init__.py  json_report.py  table_report.py
src/adjudication/services/: __init__.py  clinical_kb.py  llm_service.py  questions_service.py
src/adjudication/validation/: __init__.py  claim_validator.py  policy_validator.py
tests/: _fakes.py  conftest.py  test_accumulator.py  test_adjudicator.py  test_calculation.py  test_exclusions.py  test_extraction.py  test_llm_service.py  test_validation.py
ui/: streamlit_app.py
