[project]
name = "claim-adjudication"
version = "0.1.0"
description = "Deterministic claim adjudication engine for SecureHealth-style policies."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "streamlit>=1.30",
    "python-dotenv>=1.0",
    "pdfplumber>=0.10",
    "anthropic>=0.25",
    "httpx>=0.26",
    "python-multipart>=0.0.9",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra -q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
